src/styles.css/index.css
.video-bg {
  position: absolute;
  top: 0;
  left: 0;
  min-height: 100%;
  min-width: 100%;
  max-width: 100%;
  z-index: -1;
}

.hero-full {
  margin-bottom: 1rem;
  background-image: none !important;
  display: block !important;
  position: relative;
}

.temp-positioning {
  position: absolute;
  top: 40%;
  left: 50%;
  transform: translate(-50%, -40%);
}

.btn {
  border-radius: 30px;
  padding: 8px 1rem;
  text-align: center;
  border: none;
  outline: none;
  color: #fff;
  cursor: pointer;
}

.primary-btn {
  background-color: var(--primary-color);
}

.plain-btn {
  background-color: transparent;
  border: 1px solid var(--primary-color);
}

.welcome {
  text-align: center;
}

.welcome h2 {
  margin-bottom: 1.5rem;
  display: flex;
  flex-direction: column;
}

.welcome p {
  justify-self: end;
  margin-top: 1rem;
}

.events,
.vision {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}

.upcoming-events {
  margin-bottom: 4rem;
}

.events h2,
.vision h2 {
  text-align: center;
}

.heading-screen-sm {
  display: none;
  text-align: center;
}

.hidden-lg {
  display: none;
}

.library {
  background-color: var(--primary-color);
  color: #fff;
  text-align: center;
  padding: 1.5rem 0;
}

.library h2 {
  margin-bottom: 1.5rem;
}

.library-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 2rem;
  margin-top: 3rem;
}

.library-grid img {
  width: 99%;
}

.library-grid > div {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.7rem;
}

.library-grid .title {
  width: 60%;
}

.gallery {
  overflow: hidden;
  text-align: center;
}

.gallery h2 {
  margin-top: 2.5rem;
  margin-bottom: 1rem;
}

.gallery div {
  padding: 0 1rem;
}

.gallery div > p {
  text-align: end;
  margin-top: 1.5rem;
}

.gallery p {
  margin-bottom: 1rem;
}

.carousel {
  display: flex;
  gap: 2rem;
}

.carousel li {
  height: 200px;
  transition: 10000ms ease-in;
}

.carousel img {
  height: 100%;
}

.partner {
  margin: 4.5rem 0;
  display: flex;
  flex-direction: column;
  gap: 4.5rem;
}

/*  */
@media (max-width: 820px) {
  h2 {
    font-size: 1.2rem;
  }

  .hero-text {
    display: none;
  }

  .welcome p {
    margin-top: 0;
  }

  .library h2,
  .welcome h2,
  .gallery h2 {
    margin-bottom: 1rem;
  }

  .btn {
    display: block;
    margin-bottom: 1rem;
  }

  .upcoming-events {
    margin-top: 2rem;
    margin-bottom: 3rem;
  }

  .events h2 {
    display: none;
  }

  .events,
  .partner {
    text-align: center;
  }

  .events .btn-link,
  .btn-link {
    align-self: center;
  }

  .flex-center {
    margin-top: 1rem;
  }

  .flex-center,
  .welcome .btn-link {
    display: flex;
    justify-self: center;
  }

  .heading-screen-sm {
    display: block;
  }

  .hidden-lg {
    display: block;
    text-align: center;
  }

  .grid {
    gap: 1rem;
  }

  .library-grid {
    grid-template-columns: 1fr;
  }

  .partner {
    margin-top: 2rem;
    gap: 2rem;
  }
}

@media (max-width: 376px) {
  .hero-text {
    display: none;
  }
}

